--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
   font-family: "Arial", sans-serif;
   /* background-color: #fff0f5; */
-  background-image: url("https://i.ibb.co/b5BK2RF/snoop.jpg");
+  background-image: url("../snoop.jpg");
   color: #333;
   line-height: 1.6;
   text-align: center;
